package framework.database;

public interface BuilderContract {

}
